Fix white space on error page

--- a/app/styles/_error.scss
+++ b/app/styles/_error.scss
@@ -1,10 +1,11 @@
 .error-page {
   position: relative;
   background-repeat: no-repeat;
-  background-position: 0% 20%;
+  background-position: center;
   background-size: cover;
-  min-height: 100vh;
-  
+  height: 100vh;
+  margin-bottom: -2.4rem;
+
   @include mq($mobile) {
     background-position: 40% 0%;
   }
@@ -14,7 +15,7 @@
   position: absolute;
   top: 50px;
   left: 50px;
-  
+
   @include mq($mobile) {
     position: static;
     max-width: 65%;
@@ -24,7 +25,7 @@
 .error-title {
   @include text--largest;
   color: white;
-  
+
   @include mq($mobile) {
     @include h2;
     line-height: 1.33;
@@ -34,7 +35,7 @@
 .error-subtitle {
   @include h2;
   color: white;
-  
+
   @include mq($mobile) {
     @include fontsize($base-font); /* 16px */
     line-height: 1.63;
